@@ -1,3 +1,11 @@
+2008-06-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
+	Make jtreg target work out of the source directory,
+	and use a stamp to mark a finished icedtea build
+	so we don't build it twice.
+	* Makefile.in: Regenerated.
+
 2008-06-29  Mark Wielaard  <mark@klomp.org>
 
 	* Makefile.am (stamps/icedtea-ecj.stamp): Add dependency on
